# arkmath

./: .gitmodules  CMakeLists.txt  arkMath.pc.cmake  config.h.in  pc.in
cmake/: .gitignore  CPackPackage.cmake
cmake/arkcmake/: FindBOOSTNUMERICBINDINGS.cmake  FindBoostNumericBindings.cmake  autobuild.py
src/: CMakeLists.txt  GeoMag.cpp  GeoMag.hpp  GpsIns.cpp  GpsIns.hpp  utilities.cpp  utilities.hpp
src/gen_cpp/: d_x_wind.hpp  dynamicsBodyFrame.hpp  ins_C_nb_euler.hpp  ins_H_gps.hpp  ins_H_gps_vp.hpp  ins_H_mag.hpp  ins_H_mag_att.hpp  ins_R_gps.hpp  ins_R_mag_n.hpp  ins_dynamics_f.hpp  ins_dynamics_f_att.hpp  ins_dynamics_f_vp.hpp  ins_error_dynamics_F.hpp  ins_error_dynamics_F_att.hpp  ins_error_dynamics_F_vp.hpp  ins_error_dynamics_G.hpp  ins_error_dynamics_G_att.hpp  ins_error_dynamics_G_vp.hpp  mag_dec_dip.hpp  navigationEquations.hpp  quadForceMoments.hpp  quad_body_dynamics.hpp  quad_wind_dynamics.hpp  z_mag.hpp
src/gen_fortran/: d_x_wind.f90  dynamicsBodyFrame.f90  ins_C_nb_euler.f90  ins_C_nb_quat.f90  ins_H_gps.f90  ins_H_gps_vp.f90  ins_H_mag.f90  ins_H_mag_att.f90  ins_R_gps.f90  ins_R_mag_n.f90  ins_dynamics_f.f90  ins_dynamics_f_att.f90  ins_dynamics_f_vp.f90  ins_error_dynamics_F.f90  ins_error_dynamics_F_att.f90  ins_error_dynamics_F_vp.f90  ins_error_dynamics_G.f90  ins_error_dynamics_G_att.f90  ins_error_dynamics_G_vp.f90  mag_dec_dip.f90  navigationEquations.f90  quadForceMoments.f90  quad_body_dynamics.f90  quad_wind_dynamics.f90  z_mag.f90
test/: CMakeLists.txt  ins.cpp
theory/: .gitignore  NavPsuedoCode  ahrs.wxm  codeGen.py  coma.mac  common.wxm  dynamicsBodyFrame.wxm  dynamicsWindFrame.wxm  generateCode.sh  maxima-init.lisp  modernControlTheory.wxm  multiLoopOptimalControl.wxm  navigation.wxm  navigationEquations.wxm  navigationEuler.wxm  opticalFlowSensor.wxm  quad_body_dynamics.sci  quad_wind_dynamics.sci  quadrotorBodyFrame.wxm  quadrotorForceMoment.wxm  quadrotorWindFrame.wxm  test.py
theory/figures/: oscilloscopePicturesData.txt
theory/notes/: unityFeedback.xoj
